[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.2.0"
ckb-standalone-debugger = "0.3.0"
ckb-tool = "0.2"
ckb-testtool = "0.2.2"
ckb-x64-simulator = "0.4.0"
lazy_static = "1.4"
serde_json = "1.0"
rand = "0.7.3"
includedir = "0.5.0"
phf = "0.7.21"
sha3 = "0.8.2"
bech32 = "0.7.2"
openssl-sys = "0.9"
openssl = "0.10"
byteorder = "1.3.1"
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-dao-utils = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-fixed-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
rand_chacha = "0.1"
ripemd160 = "0.8.0"
sha2 = "0.9.0"
secp256k1 = { version = "0.15.1" }
json = "0.12.4"
data-encoding = "2.2.1"
includedir_codegen = "0.5.0"
faster-hex = "0.3"
